core_derive/tests/ui/duplicate_default.stderr
error: Cannot set both default and default_str
 --> tests/ui/duplicate_default.rs:5:30
  |
5 |     #[config(default = "10", default_str = "10")]
  |                              ^^^^^^^^^^^
